--- a/FlightSimulator/FlightSimulator.csproj
+++ b/FlightSimulator/FlightSimulator.csproj
@@ -71,7 +71,9 @@
     <Compile Include="Model\CommandHandler.cs" />
     <Compile Include="Model\EventArgs\VirtualJoystickEventArgs.cs" />
     <Compile Include="Model\Interface\ISettingsModel.cs" />
-    <Compile Include="server.cs" />
+    <Compile Include="Model\Server.cs" />
+    <Compile Include="SingeltonCommand.cs" />
+    <Compile Include="SingeltonServer.cs" />
     <Compile Include="ViewModels\BaseNotify.cs" />
     <Compile Include="ViewModels\FlightBoardViewModel.cs" />
     <Compile Include="ViewModels\viewModelAuto.cs" />
